--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
 }
-
+.page-header{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 5vh;
+  align-items: center;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
